tests/resource/valid/function/print_string.mamba
def my_string := "asdf"

print(my_string)
