tests/resource/invalid/type/collection/set_no_get.mamba
def x := {0, "asdf", 51}
x.get(0)
